deployment.yaml
---
apiVersion: v1
#apiVersion: apps/v1beta1
#kind: Deployment
kind: Pod
metadata:
  name: mern-auth
  namespace: development
  labels:
    app: mern-auth
spec:
  hostname: mern-auth
  subdomain: default-subdomain
#  replicas: 1
#  selector:
#    matchLabels:
#      app: mern-auth
#  template:
#    metadata:
#      labels:
#        app: mern-auth
#    spec:
  dnsPolicy: Default
  volumes:
  - name: task-pv-storage
    persistentVolumeClaim:
      claimName: task-pv-claim
  - name: data2
    persistentVolumeClaim:
      claimName: data-claim2
  containers:
    - name: mern-auth
      #imagePullPolicy: IfNotPresent
      imagePullPolicy: Always
      image: pstambaugh14/mern-auth-jenks-k8s
      ports:
        - containerPort: 3000
          name: "frontend"
        - containerPort: 5000
          name: "backend"
      volumeMounts:
        - mountPath: "/var/lib/jenkins/workspace/mern_docker/config"
          name: task-pv-storage
    - name: mongodb-container
      imagePullPolicy: Always
      image: mongo:4.2.0
#      command: mongodb
      volumeMounts:
        - mountPath: /var/lib/mongo
          name: data2
      ports:
      - containerPort: 27017
        name: mongodbport
