mongodb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  template:
  metadata:
  labels:
    app: db
spec:
  restartPolicy: Always
  volumes:
    - name: data-storage
  persistentVolumeClaim:
  claimName: data-claim
  containers:
    - name: mongodb-container
#      image: "de13/mongo-myapp" #not too sure about the image...
      image: mongo:4.2.0 
  volumeMounts:
    - name: data-storage
  mountPath: /var/lib/mongo
    ports:
    - containerPort: 27017
#    - targetPort: 27015 #added, might not be necessary
