mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: mongo
  labels:
#    name: mongo
    name: mern-auth
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
