service.yaml
apiVersion: v1
kind: Service
metadata:
#  name: mern-auth-service
  name: mern-auth-service
#  labels:
#    name: mern-auth
  namespace: development
  labels:
    app: mern-auth
spec:
  selector:
    app: mern-auth
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: backend
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
